--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1",
+    "css-loader": "^2.1.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.6",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "html-webpack-plugin": "^3.2.0"
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-cli": "^2.0.0"
   }
 }
