--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^2.1.1",
+    "npm-install-webpack-plugin": "^4.0.5",
     "style-loader": "^0.23.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.6",
