--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-survivejs-kanban": "^0.3.3",
     "css-loader": "^2.1.1",
     "npm-install-webpack-plugin": "^4.0.5",
     "style-loader": "^0.23.1",
@@ -21,6 +26,8 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "webpack-cli": "^2.0.0"
   }
 }
