--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "node-uuid": "^1.4.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack-cli": "^2.0.0"
